# Basic-Python

./: .gitignore  README.md
Agda/: README.md
Agda/LearnYouAnAgda/: Peano.agda  Peano.agdai
C/Basic_Stuff/: a.out  memcopy.c
C/Expirementation/: test.c
C/Foundations_For_Cpp/: C_Notes.odt
Clojure/: README.md
FIG/: README.md
FIG/css/: betterbionic.css
FIG/handout/: handout.aux  handout.tex
Haskell/: README.md  errata.txt
Haskell/Expirements/: Hasher.hs  Heman.hs  NativeGTE.hs
Haskell/Projects/: README.md
Haskell/SixTheGame/: CoreEngine.hs
Haskell/TheGameSix/: CoreEngine.hs
Haskell/expirements/: EitherMonad.hs  Union.hs
Haskell/keycounter/: keycounter.cabal
Haskell/smt-solver/: SMTTesting.hs
Haskell/teaching/: Harmonic.hi
Idris/: README.md
Idris/helloWorld/: hello
Idris/tutorial/: filewrite.idr  tutorial.ibc  tutorial.idr
Java/Demo2/: AppRealThing2.launch
Misc/: GitNotes.txt
Racket/: README.md  test.scm
Rust/: concur  concur.rs
Scala/: Nats.scala  README.txt
Scala/expirements/: OptionMonad.scala
c/: README.md
c++/: README.md
c/Expirementation/: a.out
c/Projects/: a.out
c/foundations-for-cpp/: .~lock.c-notes.odt#
c/projects/: matrix-rotator.c
haskell/: README.md
haskell/cs380Labs/: README.md
haskell/expirements/: Constraints.hs  OneIsTwo.hs  Union.hs
haskell/projects/: README.md
haskell/snap-web/counter/: LICENSE  counter.cabal
haskell/snap-web/counter/src/: Main.hs
haskell/teaching/: Harmonic  Harmonic.hs
haskell/tic-tac-toe/: stack.yaml  tic-tac-toe.cabal
haskell/tic-tac-toe/src/: Board.hs  Display.hs  Game.hs  Main.hs  Triple.hs
java/: Helpful.md  README.md
ocaml/cos-326/: README.md
python/: README.md
python/WebServer/: index.html
python/web2/: web.py
rust/: README.md
scala/: README.md
(+115 files in other folders)
