name:                tic-tac-toe
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/tic-tac-toe#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable tic-tac-toe
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
    Board
    Display
    Triple
    Game
  default-language:    Haskell2010
  build-depends:
    base,
    gloss
