name:                counter
version:             0.1.0.0
-- synopsis:
-- description:
author:              Divesh Otwani
maintainer:          divesh.otwani@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.2

executable counter
  hs-source-dirs:   src
  main-is:          Main.hs
  default-language: Haskell2010

  build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    mtl                       >= 2     && < 3,
    snap-core                 >= 1.0   && < 1.1,
    snap-server               >= 1.0   && < 1.2,
    stm-containers            >= 0.0,
    focus                     >= 0.0,
    stm                       >= 0.0

-- TODO: set right versions above

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
